--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -7,22 +7,22 @@ on:
        required: false
        default: 'release'
 jobs:
-  production:
+  development:
     runs-on: ubuntu-latest    
-    if: ${{inputs.Configuration}} == "release" 
-    environment: Production
+    if: ${{inputs.Configuration}} != "release" 
     steps:
      - name: EnvironmentSetup1
        run: |
-           echo "Setting environment to Production"
-           echo "MY_ENVIRONMENT=Production" >> $GITHUB_ENV
-  development:
-    needs: production
-    runs-on: ubuntu-latest    
-    if: ${{ failure() }}
+           echo "Setting environment to development"
+           echo "MY_ENVIRONMENT=" >> $GITHUB_ENV
+  production:
+    runs-on: ubuntu-latest 
+    needs: development
+    if: ${{ failure('developement') }}
+    environment: Production
     steps:
      - name: EnvironmentSetup2
        run: |
            echo "Setting environment to Production"
-           echo "MY_ENVIRONMENT=Production" >> $GITHUB_ENV
+           echo "MY_ENVIRONMENT=Production" >> $GITHUB_ENV        
      
