--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -18,7 +18,7 @@ jobs:
   production:
     runs-on: ubuntu-latest 
     needs: development
-    if: ${{ failure() }}
+    if: ${{ inputs.Configuration == "release" }}
     environment: Production
     steps:
      - name: EnvironmentSetup2
