--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -9,20 +9,18 @@ on:
 jobs:
   development:
     runs-on: ubuntu-latest    
-    if: ${{inputs.Configuration }} != "release"
+    if: "${{inputs.Configuration }} != release"
     steps:
      - name: EnvironmentSetup1
        run: |
            echo "Setting environment to development"
-           echo "MY_ENVIRONMENT=" >> $GITHUB_ENV
   production:
     runs-on: ubuntu-latest 
     needs: development
-    if: ${{ inputs.Configuration }} == "release"
+    if: "${{ inputs.Configuration }} == release"
     environment: Production
     steps:
      - name: EnvironmentSetup2
        run: |
-           echo "Setting environment to Production"
-           echo "MY_ENVIRONMENT=Production" >> $GITHUB_ENV        
+           echo "Setting environment to Production" 
      
