--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -8,16 +8,16 @@ on:
        default: 'release'
 jobs:
   development:
-    runs-on: ubuntu-latest    
-    if: "${{inputs.Configuration }} != release"
+    runs-on: ubuntu-latest  
+    if: "${{inputs.Configuration}} != 'release'"
     steps:
-     - name: EnvironmentSetup1
+     - name: EnvironmentSetup
        run: |
            echo "Setting environment to development"
   production:
     runs-on: ubuntu-latest 
     needs: development
-    if: "${{ inputs.Configuration }} == release"
+    if: "${{ inputs.Configuration }} == 'release'"
     environment: Production
     steps:
      - name: EnvironmentSetup2
