--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -12,15 +12,13 @@ jobs:
     if: ${{inputs.Configuration != 'release' }}
     steps:
      - name: EnvironmentSetup
-       run: |
-           echo "Setting environment to development"
+       run: echo "Setting environment to development"
   production:
     runs-on: ubuntu-latest 
     needs: development
-    if: ${{ failure() }}
     environment: Production
     steps:
      - name: EnvironmentSetup2
-       run: |
-           echo "Setting environment to Production" 
+       if: ${{ failure() }}
+       run: echo "Setting environment to Production" 
      
