--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -14,11 +14,11 @@ jobs:
      - name: EnvironmentSetup
        run: echo "Setting environment to development"
   production:
+    if: ${{inputs.Configuration == 'release' }}
     runs-on: ubuntu-latest 
     needs: development
     environment: Production
     steps:
      - name: EnvironmentSetup2
-       if: ${{ failure() }}
        run: echo "Setting environment to Production" 
      
