--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -4,7 +4,7 @@ on:
    inputs:
      Configuration:
        description: 'Configuration'
-       required: false
+       required: true
        default: 'release'
 jobs:
   development:
