--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -19,5 +19,5 @@ jobs:
     environment: Production
     steps:
      - name: EnvironmentSetup2
-       run: echo "Setting environment to Production" 
+       uses: ./.github/workflows/Environment_Message.yml
      
