--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -22,3 +22,9 @@ jobs:
        uses: ./.github/workflows/Environment_Message.yml
        with:
             configuration: ${{ inputs.configuration }}
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: production
+    steps:
+      - run: echo ${{ needs.call_reusable.outputs.status }}
