--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -17,6 +17,7 @@ jobs:
              Echo "Building Message....."
    upload_message:
        runs-on: ubuntu-latest
+       environment: production
        needs: build_message
        steps:
         - name: Upload Message
