--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -3,6 +3,7 @@ on:
  workflow_dispatch:
    inputs:
      Configuration:
+       type: string
        description: 'Configuration'
        required: true
        default: 'release'
