--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -11,6 +11,8 @@ on:
 jobs:
    build_message:
        runs-on: ubuntu-latest
+       outputs:
+         conclusion: ${{ steps.build_message.outcome }}
        steps:
         - name: Build Message
           run: |
@@ -19,6 +21,8 @@ jobs:
        runs-on: ubuntu-latest
        environment: production
        needs: build_message
+       outputs:
+         conclusion: ${{ steps.upload_message.outcome }}
        steps:
         - name: Upload Message
           run: |
@@ -26,6 +30,8 @@ jobs:
    process_message:
        runs-on: ubuntu-latest
        needs: upload_message
+       outputs:
+         conclusion: ${{ steps.process_message.outcome }}
        steps:
         - name: Build Message
           run: |
