--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -24,4 +24,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: production
     steps:
-      - run: echo ${{ needs.production.outputs.status }}
+      - name: Check Conclusion
+        run: |
+         build_conclusion="${{ steps.call_message_workflow.outputs.build_message_conclusion }}"
+         upload_conclusion="${{ steps.call_message_workflow.outputs.upload_message_conclusion }}"
+         process_conclusion="${{ steps.call_message_workflow.outputs.process_message_conclusion }}"
+         if [ "$build_conclusion" == "success" ] && [ "$upload_conclusion" == "success" ] && [ "$process_conclusion" == "success" ]; then
+           echo "Overall Status: SUCCESS"
+         else
+           echo "Overall Status: FAILURE"
+         fi
