--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -12,7 +12,7 @@ jobs:
    build_message:
        runs-on: ubuntu-latest
        outputs:
-         conclusion: ${{ steps.build_message.outcome }}
+         bmconclusion: ${{ steps.build_message.outcome }}
        steps:
         - name: Build Message
           run: |
@@ -21,7 +21,7 @@ jobs:
        runs-on: ubuntu-latest
        environment: production
        needs: build_message
-       outputs:
+       umoutputs:
          conclusion: ${{ steps.upload_message.outcome }}
        steps:
         - name: Upload Message
@@ -31,7 +31,7 @@ jobs:
        runs-on: ubuntu-latest
        needs: upload_message
        outputs:
-         conclusion: ${{ steps.process_message.outcome }}
+         pmconclusion: ${{ steps.process_message.outcome }}
        steps:
         - name: Build Message
           run: |
