--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -21,8 +21,8 @@ jobs:
        runs-on: ubuntu-latest
        environment: production
        needs: build_message
-       umoutputs:
-         conclusion: ${{ steps.upload_message.outcome }}
+       outputs:
+         umconclusion: ${{ steps.upload_message.outcome }}
        steps:
         - name: Upload Message
           run: |
