--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -9,11 +9,10 @@ on:
        default: 'release'
 jobs:
   development:
-    runs-on: ubuntu-latest  
     if: ${{inputs.Configuration != 'release' }}
-    steps:
-     - name: EnvironmentSetup
-       run: echo "Setting environment to development"
+    uses: ./.github/workflows/Environment_Message.yml
+    with:
+      configuration: ${{ inputs.configuration }}
   production:
     if: ${{inputs.Configuration == 'release' }}
     uses: ./.github/workflows/Environment_Message.yml
