--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -40,7 +40,7 @@ jobs:
              echo "Uploading Message....."
    process_message:
        runs-on: ubuntu-latest
-       needs: [upload_message,upload]
+       if: ${{ failure('upload_message' || 'upload') }}
        outputs:
          pmconclusion: ${{ steps.process_message.outcome }}
        steps:
