--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -40,10 +40,20 @@ jobs:
              echo "Uploading Message....."
    process_message:
        runs-on: ubuntu-latest
-       if: ${{ success('upload') || success('upload_message') }}
+       needs: upload_message
        outputs:
          pmconclusion: ${{ steps.process_message.outcome }}
        steps:
         - name: Build Message
           run: |
              echo "process Message....."
+   process:
+       runs-on: ubuntu-latest
+       needs: upload
+       outputs:
+         pmconclusion: ${{ steps.process_message.outcome }}
+       steps:
+        - name: Build Message
+          run: |
+             echo "process Message....."
+          
