--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -33,7 +33,7 @@ jobs:
        if: ${{inputs.Configuration != 'release' }}
        needs: build_message
        outputs:
-         umconclusion: ${{ steps.upload_message.outcome }}
+         umconclusion: ${{ steps.upload.outcome }}
        steps:
         - name: Upload Message
           run: |
@@ -51,7 +51,7 @@ jobs:
        runs-on: ubuntu-latest
        needs: upload
        outputs:
-         pmconclusion: ${{ steps.process_message.outcome }}
+         pmconclusion: ${{ steps.process.outcome }}
        steps:
         - name: Build Message
           run: |
