--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -21,7 +21,7 @@ jobs:
 
   job2:
     runs-on: ubuntu-latest
-    needs: production
+    if: ${{ success() }}
     steps:
       - name: Check Conclusion
         run: |
