--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -21,7 +21,7 @@ jobs:
 
   job2:
     runs-on: ubuntu-latest
-    if: ${{ success() }}
+    needs: [production,development]
     steps:
       - name: Check Conclusion
         run: |
