--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -8,6 +8,17 @@ on:
         description: 'Environment Setup'
         required: true 
         default: 'release'
+   outputs:
+     bmconclusion:
+        value: ${{ jobs.build_message.outputs.bmconclusion }}   
+     umconclusion:
+        value: ${{ jobs.upload_message.outputs.umconclusion }} 
+     pmconclusion:
+        value: ${{ jobs.process_message.outputs.pmconclusion }} 
+     uconclusion:
+        value: ${{ jobs.upload.outputs.uconclusion }} 
+     pconclusion:
+        value: ${{ jobs.process.outputs.pconclusion }} 
 jobs:
    build_message:
        runs-on: ubuntu-latest
@@ -33,7 +44,7 @@ jobs:
        if: ${{inputs.Configuration != 'release' }}
        needs: build_message
        outputs:
-         umconclusion: ${{ steps.upload.outcome }}
+         uconclusion: ${{ steps.upload.outcome }}
        steps:
         - name: Upload Message
           run: |
@@ -51,7 +62,7 @@ jobs:
        runs-on: ubuntu-latest
        needs: upload
        outputs:
-         pmconclusion: ${{ steps.process.outcome }}
+         pconclusion: ${{ steps.process.outcome }}
        steps:
         - name: Build Message
           run: |
