--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -23,7 +23,7 @@ jobs:
    build_message:
        runs-on: ubuntu-latest
        outputs:
-         bmconclusion: ${{ steps.build_message.outcome }}
+         bmconclusion: ${{ needs.build_message.outcome }}
        steps:
         - name: Build Message
           run: |
@@ -34,7 +34,7 @@ jobs:
        environment: production
        needs: build_message
        outputs:
-         umconclusion: ${{ steps.upload_message.outcome }}
+         umconclusion: ${{ needs.upload_message.outcome }}
        steps:
         - name: Upload Message
           run: |
@@ -44,7 +44,7 @@ jobs:
        if: ${{inputs.Configuration != 'release' }}
        needs: build_message
        outputs:
-         uconclusion: ${{ steps.upload.outcome }}
+         uconclusion: ${{ needs.upload.outcome }}
        steps:
         - name: Upload Message
           run: |
@@ -53,7 +53,7 @@ jobs:
        runs-on: ubuntu-latest
        needs: upload_message
        outputs:
-         pmconclusion: ${{ steps.process_message.outcome }}
+         pmconclusion: ${{ needs.process_message.outcome }}
        steps:
         - name: Build Message
           run: |
@@ -62,7 +62,7 @@ jobs:
        runs-on: ubuntu-latest
        needs: upload
        outputs:
-         pconclusion: ${{ steps.process.outcome }}
+         pconclusion: ${{ needs.process.outcome }}
        steps:
         - name: Build Message
           run: |
