--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: Check Conclusion
         run: |
-         if: ${{ success() }}
+         if[ "${{ success() }}" ]; then
            echo "Overall Status: SUCCESS"
          else
            echo "Overall Status: CANCELLED"
