--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -25,8 +25,10 @@ jobs:
     steps:
       - name: Check Conclusion
         run: |
-          if: ${{ success() }}
-          echo "Overall Status: SUCCESS"
+          if[ "${{success()}}" ]; then
+           echo "Overall Status: SUCCESS"
+          else
+           echo "Overall Status: FAILURE"
   Production_status:
     runs-on: ubuntu-latest
     needs: production
