--- a/.github/workflows/Environment_Message.yml
+++ b/.github/workflows/Environment_Message.yml
@@ -10,7 +10,7 @@ on:
         default: 'release'
    outputs:
      bmconclusion:
-        value: ${{ jobs.build_message.outputs.conclusion }}   
+        value: ${{ jobs.build_message.outputs.bmconclusion }}   
      umconclusion:
         value: ${{ jobs.upload_message.outputs.umconclusion }} 
      pmconclusion:
@@ -23,7 +23,7 @@ jobs:
    build_message:
        runs-on: ubuntu-latest
        outputs:
-         conclusion: ${{ steps.build.outputs.bmconclusion }}
+         bmconclusion: ${{ steps.build.outputs.bmconclusion }}
        steps:
         - id: build
           run:
@@ -35,37 +35,41 @@ jobs:
        environment: production
        needs: build_message
        outputs:
-         umconclusion: ${{ needs.upload_message.outcome }}
+         umconclusion: ${{ steps.UploadMessage.outputs.umconclusion }}
        steps:
-        - name: Upload Message
+        - id: UploadMessage
           run: |
              echo "Uploading Message....."
+             echo "umconclusion=success" >> $GITHUB_OUTPUT
    upload:
        runs-on: ubuntu-latest
        if: ${{inputs.Configuration != 'release' }}
        needs: build_message
        outputs:
-         uconclusion: ${{ needs.upload.outcome }}
+         uconclusion: ${{ steps.Upload.outputs.uconclusion }}
        steps:
-        - name: Upload Message
+        - id: Upload
           run: |
              echo "Uploading Message....."
+             echo "uconclusion=success" >> $GITHUB_OUTPUT
    process_message:
        runs-on: ubuntu-latest
        needs: upload_message
        outputs:
-         pmconclusion: ${{ needs.process_message.outcome }}
+         pmconclusion: ${{ steps.ProcessMessage.outputs.pmconclusion }}
        steps:
-        - name: Build Message
+        - id: ProcessMessage
           run: |
              echo "process Message....."
+             echo "pmconclusion=success" >> $GITHUB_OUTPUT
    process:
        runs-on: ubuntu-latest
        needs: upload
        outputs:
-         pconclusion: ${{ needs.process.outcome }}
+         pconclusion: ${{ steps.Process.outputs.pconclusion }}
        steps:
-        - name: Build Message
+        - id: Process
           run: |
              echo "process Message....."
+             echo "pconclusion=success" >> $GITHUB_OUTPUT
           
