--- a/.github/workflows/Environment_Setup.yml
+++ b/.github/workflows/Environment_Setup.yml
@@ -23,11 +23,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: development
     steps:
-      - name: Check Conclusion
+      - name: Development Conclusion
         run: |
-          build_conclusions= ${{needs.development.outputs.bmconclusion}}
-          upload_conclusion= ${{needs.development.outputs.uconclusion}}
-          process_conclusion= ${{needs.development.outputs.pconclusion}}
+          build_conclusions= ${{ needs.development.outputs.bmconclusion }}
+          upload_conclusion= ${{ needs.development.outputs.uconclusion }}
+          process_conclusion= ${{ needs.development.outputs.pconclusion }}
           if [ "$build_conclusions" == "success" ] && [ "$upload_conclusion" == "success" ] && [ "$process_conclusion" == "success" ]; then
            echo "Overall Status: SUCCESS"
           else
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: production
     steps:
-      - name: Check Conclusion
+      - name: Production Conclusion
         run: |
          build_conclusion="${{ needs.production.outputs.bmconclusion }}"
          upload_conclusion="${{ needs.production.outputs.umconclusion }}"
