--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -35,7 +35,7 @@ jobs:
        steps:
         - name: setEnvironment
           run: |
-            if{{ inputs.Configuration == 'release' }}
+            if [[ "${{inputs.Configuration}}" ]] == 'release'; then
                echo "environment=production" >> $GITHUB_OUTPUT
             else
                echo "environment=" >> $GITHUB_OUTPUT
