--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -38,7 +38,7 @@ jobs:
             if [[ "${{inputs.Configuration}}"  == "release" ]]; then
                echo "environment=production" >> $GITHUB_OUTPUT
             else
-               echo "environment=" >> $GITHUB_OUTPUT
+               echo "No permission required."
    upload_message:
        runs-on: ubuntu-latest
        needs: [build_message,set_environment]
