--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -40,7 +40,7 @@ jobs:
    upload_message:
        runs-on: ubuntu-latest
        needs: [build_message,set_environment]
-       environment: ${{ needs.set_environment.outputs.environment }}
+       environment: '${{ needs.set_environment.outputs.environment }}'
        outputs:
          umconclusion: ${{ steps.UploadMessage.outputs.umconclusion }}
        steps:
