--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -15,6 +15,8 @@ on:
         value: ${{ jobs.upload_message.outputs.umconclusion }} 
      pmconclusion:
         value: ${{ jobs.process_message.outputs.pmconclusion }}
+     environment:
+        value: ${{ jobs.process_message.outputs.environment }}
 jobs:
    build_message:
        runs-on: ubuntu-latest
@@ -41,12 +43,13 @@ jobs:
        runs-on: ubuntu-latest
        needs: [build_message,set_environment]
        environment: 
-           name: '${{ needs.set_environment.outputs.environment }}'
+           name: $environment
        outputs:
          umconclusion: ${{ steps.UploadMessage.outputs.umconclusion }}
        steps:
         - id: UploadMessage
           run: |
+             echo
              echo "Uploading Message....."
         - id: Upload-Message
           run: |
