--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -16,7 +16,7 @@ on:
      pmconclusion:
         value: ${{ jobs.process_message.outputs.pmconclusion }}
      environment:
-        value: ${{ jobs.process_message.outputs.environment }}
+        value: ${{ jobs.set_environment.outputs.environment }}
 jobs:
    build_message:
        runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
    upload_message:
        runs-on: ubuntu-latest
        needs: [build_message,set_environment]
-       environment: $environment
+       environment: ${{needs.set_environment.outputs.environment}}
        outputs:
          umconclusion: ${{ steps.UploadMessage.outputs.umconclusion }}
        steps:
