--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -48,6 +48,7 @@ jobs:
        steps:
         - id: UploadMessage
           run: |
+             environment = ${{needs.set_environment.outputs.environment}}
              echo  "$environment"
              echo "Uploading Message....."
         - id: Upload-Message
