--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -14,9 +14,7 @@ on:
      umconclusion:
         value: ${{ jobs.upload_message.outputs.umconclusion }} 
      pmconclusion:
-        value: ${{ jobs.process_message.outputs.pmconclusion }}
-     environment:
-        value: ${{ jobs.set_environment.outputs.environment }}
+        value: ${{ jobs.process_message.outputs.pmconclusion }} 
 jobs:
    build_message:
        runs-on: ubuntu-latest
@@ -30,34 +28,34 @@ jobs:
           run: |
              echo "Build"
              echo "bmconclusion=success" >> $GITHUB_OUTPUT
-   set_environment:
+   upload_production:
        runs-on: ubuntu-latest
-       outputs:
-         environment: ${{ steps.UploadMessage.outputs.environment }} 
        if: ${{inputs.Configuration == 'release' }}
-       steps:
-        - name: setEnvironment
-          run: |            
-               echo "environment=production" >> $GITHUB_OUTPUT
-   upload_message:
-       runs-on: ubuntu-latest
-       needs: [build_message,set_environment]
-       environment: ${{needs.set_environment.outputs.environment}}
+       environment: production
+       needs: build_message
        outputs:
          umconclusion: ${{ steps.UploadMessage.outputs.umconclusion }}
        steps:
         - id: UploadMessage
           run: |
-             environment = ${{needs.set_environment.outputs.environment}}
-             echo  "$environment"
              echo "Uploading Message....."
+             echo "umconclusion=success" >> $GITHUB_OUTPUT
+   upload_development:
+       runs-on: ubuntu-latest
+       if: ${{inputs.Configuration != 'release' }}
+       needs: build_message
+       outputs:
+         uconclusion: ${{ steps.Upload.outputs.umconclusion }}
+       steps:
+        - id: UploadMessage
+          run: echo "Uploading Message....."
         - id: Upload-Message
           run: |
              echo "Upload"
              echo "umconclusion=success" >> $GITHUB_OUTPUT
-   process_message:
+   process_development:
        runs-on: ubuntu-latest
-       needs: upload_message
+       needs: upload_development
        outputs:
          pmconclusion: ${{ steps.ProcessMessage.outputs.pmconclusion }}
        steps:
@@ -68,4 +66,16 @@ jobs:
           run: |
              echo "process Message....."
              echo "pconclusion=success" >> $GITHUB_OUTPUT
-          
+   process_production:
+       runs-on: ubuntu-latest
+       needs: upload_production
+       outputs:
+         pconclusion: ${{ steps.Process.outputs.pmconclusion }}
+       steps:
+        - id: ProcessMessage
+          run: |
+             echo "process Message....."
+        - id: Process
+          run: |
+             echo "process Message....."
+             echo "pconclusion=success" >> $GITHUB_OUTPUT
