--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -19,11 +19,12 @@ jobs:
    build_message:
        runs-on: ubuntu-latest
        outputs:
-         bmconclusion: ${{ steps.build.outputs.bmconclusion }}
+         bmconclusion: ${{ steps.build-message.outputs.bmconclusion }}
        steps:
-        - id: build
+        - id: build-message
           run:  |
              echo "Building Message....."
+             echo "bmconclusion=success" >> $GITHUB_OUTPUT
         - name: build
           run: |
              echo "Build"
@@ -61,11 +62,12 @@ jobs:
        steps:
         - id: ProcessMessage
           run: |
+             echo "pmconclusion=success" >> $GITHUB_OUTPUT
              echo "process Message....."
         - id: Process
           run: |
              echo "process Message....."
-             echo "pconclusion=success" >> $GITHUB_OUTPUT
+             echo "pmconclusion=success" >> $GITHUB_OUTPUT
    process_production:
        runs-on: ubuntu-latest
        needs: upload_production
@@ -74,8 +76,9 @@ jobs:
        steps:
         - id: ProcessMessage
           run: |
+             echo "pmconclusion=success" >> $GITHUB_OUTPUT
              echo "process Message....."
         - id: Process
           run: |
              echo "process Message....."
-             echo "pconclusion=success" >> $GITHUB_OUTPUT
+             echo "pmconclusion=success" >> $GITHUB_OUTPUT
