--- a/.github/workflows/mainworkflowtrial.yml
+++ b/.github/workflows/mainworkflowtrial.yml
@@ -12,25 +12,19 @@ jobs:
     uses: ./.github/workflows/reuseableworkflowtrail.yml
     with:
       configuration: ${{ inputs.configuration }}
-
   status:
-    runs-on: ubuntu-latest
-    needs: development-production
-    steps:
-      - name: Development Conclusion
-        run: |
-         build_conclusion="${{ needs.development-production.outputs.bmconclusion }}"
-         upload_conclusion="${{ needs.development-production.outputs.umconclusion }}"
-         process_conclusion="${{ needs.development-production.outputs.pmconclusion }}"
-         if [ "$build_conclusion" == "success" ] && [ "$upload_conclusion" == "success" ] && [ "$process_conclusion" == "success" ]; then
-           echo "Overall Status: SUCCESS"
-         else
-           echo "Overall Status: FAILURE"
-         fi
-  cancelled_status:
      runs-on: ubuntu-latest
      needs: development-production
-     if: cancelled()
      steps: 
-       - name: cancel
-         run: echo "The workflow was Cancelled."
+       - name: Success
+         if: ${{ success() }}
+         run: 
+          echo "The workflow was Success."
+       - name: failure
+         if: ${{ failure() }}
+         run: 
+          echo "The workflow was failure."
+       - name: Cancelled
+         if: ${{ cancelled() }}
+         run: 
+          echo "The workflow was cancelled."
