--- a/.github/workflows/reuseableworkflowtrail.yml
+++ b/.github/workflows/reuseableworkflowtrail.yml
@@ -8,79 +8,49 @@ on:
         description: 'Environment Setup'
         required: true 
         default: 'release'
-   outputs:
-     bmconclusion:
-        value: ${{ jobs.build_message.outputs.bmconclusion }}   
-     umconclusion:
-        value: ${{ jobs.upload_development.outputs.umconclusion }}
-     umconclusion:
-        value: ${{ jobs.upload_production.outputs.umconclusion }} 
-     pmconclusion:
-        value: ${{ jobs.process_message.outputs.pmconclusion }} 
 jobs:
    build_message:
        runs-on: ubuntu-latest
-       outputs:
-         bmconclusion: ${{ steps.build-message.outputs.bmconclusion }}
        steps:
         - id: build-message
           run:  |
              echo "Building Message....."
-             echo "bmconclusion=success" >> $GITHUB_OUTPUT
         - name: build
           run: |
              echo "Build"
-             echo "bmconclusion=success" >> $GITHUB_OUTPUT
    upload_production:
        runs-on: ubuntu-latest
        if: ${{inputs.Configuration == 'release' }}
        environment: production
        needs: build_message
-       outputs:
-         umconclusion: ${{ steps.UploadMessage.outputs.umconclusion }}
        steps:
         - id: UploadMessage
           run: |
              echo "Uploading Message....."
-             echo "umconclusion=success" >> $GITHUB_OUTPUT
    upload_development:
        runs-on: ubuntu-latest
        if: ${{inputs.Configuration != 'release' }}
        needs: build_message
-       outputs:
-         uconclusion: ${{ steps.Upload.outputs.umconclusion }}
        steps:
         - id: UploadMessage
           run: echo "Uploading Message....."
         - id: Upload-Message
-          run: |
-             echo "Upload"
-             echo "umconclusion=success" >> $GITHUB_OUTPUT
+          run: echo "Upload"
    process_development:
        runs-on: ubuntu-latest
        needs: upload_development
-       outputs:
-         pmconclusion: ${{ steps.ProcessMessage.outputs.pmconclusion }}
        steps:
         - id: ProcessMessage
           run: |
              echo "pmconclusion=success" >> $GITHUB_OUTPUT
-             echo "process Message....."
         - id: Process
           run: |
              echo "process Message....."
-             echo "pmconclusion=success" >> $GITHUB_OUTPUT
    process_production:
        runs-on: ubuntu-latest
        needs: upload_production
-       outputs:
-         pconclusion: ${{ steps.Process.outputs.pmconclusion }}
        steps:
         - id: ProcessMessage
-          run: |
-             echo "pmconclusion=success" >> $GITHUB_OUTPUT
-             echo "process Message....."
+          run: echo "process Message....."
         - id: Process
-          run: |
-             echo "process Message....."
-             echo "pmconclusion=success" >> $GITHUB_OUTPUT
+          run: echo "process Message....."
