--- a/.github/workflows/mainworkflowtrial.yml
+++ b/.github/workflows/mainworkflowtrial.yml
@@ -14,17 +14,16 @@ jobs:
       configuration: ${{ inputs.configuration }}
   status:
      runs-on: ubuntu-latest
-     needs: development-production
      steps: 
        - name: Success
-         if: ${{ success() }}
+         if: ${{ success('development-production') }}
          run: 
           echo "The workflow was Success."
        - name: failure
-         if: ${{ failure() }}
+         if: ${{ failure('development-production') }}
          run: 
           echo "The workflow was failure."
        - name: Cancelled
-         if: ${{ cancelled() }}
+         if: ${{ cancelled('development-production') }}
          run: 
           echo "The workflow was cancelled."
