--- a/.github/workflows/mainworkflowtrial.yml
+++ b/.github/workflows/mainworkflowtrial.yml
@@ -14,6 +14,7 @@ jobs:
       configuration: ${{ inputs.configuration }}
   status:
      runs-on: ubuntu-latest
+     needs: development-production
      steps: 
        - name: Success
          if: ${{ success() && steps.development-production.conclusion == 'success' }}
