--- a/.github/workflows/mainworkflowtrial.yml
+++ b/.github/workflows/mainworkflowtrial.yml
@@ -12,7 +12,9 @@ jobs:
     uses: ./.github/workflows/reuseableworkflowtrail.yml
     with:
       configuration: ${{ inputs.configuration }}
+  
   status:
+     if: ${{ always() }}
      runs-on: ubuntu-latest
      needs: development-production
      steps: 
