--- a/.github/workflows/mainworkflowtrial.yml
+++ b/.github/workflows/mainworkflowtrial.yml
@@ -19,13 +19,14 @@ jobs:
      needs: development-production
      steps: 
        - name: Success
-         if: ${{ always() }}
-         run: |
-          if [${{ success() }}]; then
+         if: ${{ success() }}
+         run: 
           echo "The workflow was Success."
-          fi
-          if [${{ always() }}]; then
-          echo "The workflow was failure."
-          else
+       - name: failure
+         if: ${{ failure() }}
+         run: 
+          echo "The workflow was failed."
+       - name: Cancelled
+         if: ${{ cancelled() }}
+         run: 
           echo "The workflow was cancelled."
-          fi
